System App localiztion is fixed with system localizations

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,12 +4,12 @@
         "description":"The Current language"
         },
     "light": "Light",
-    "@language": {
-        "description":"The Current language"
+    "@light": {
+        "description":"This is light theme"
         },
     "dark": "Dark",
-    "@language": {
-        "description":"The Current language"
+    "@dark": {
+        "description":"This is dark theme"
         }
 
 }
