Localization is sotred and done

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,5 +1,6 @@
 {
     "language": "বাংলা",
     "light": "হালকা",
-    "dark": "ডার্ক"
+    "dark": "ডার্ক",
+    "searchBarTitle":"আপনি কি খুজছেন?"
 }
