Bug fixed,auth bug fixed, forget password, and language added

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,6 +1,63 @@
 {
-    "language": "বাংলা",
-    "light": "হালকা",
-    "dark": "ডার্ক",
-    "searchBarTitle":"আপনি কি খুজছেন?"
+    "language": "ভাষা মোড",
+    "light": "আলোর মোড",
+    "dark": "ডার্ক মোড",
+    "on":"অন",
+    "searchBarTitle":"আপনি কি খুজছেন?",
+    "store":"দোকান",
+    "upload":"আপলোড",
+    "dashboard":"ড্যাশবোর্ড",
+    "shop":"দোকান",
+    "cart":"কার্ট",
+    "category":"শ্রেণী",
+    "home":"হোম",
+    "profile":"প্রোফাইল",
+    "you_have_not_pick_any_images":"আপনি কোনো ছবি\nবাছাই করেননি",
+    "clear_all":"পরিষ্কার",
+    "select_category_here":"এখানে বিভাগ\nনির্বাচন করুন",
+    "select_sub_category_here":"এখানে সাব\nক্যাটাগরি নির্বাচন\nকরুন",
+    "product_name":"পণ্যের নাম",
+    "product_price":"পণ্যের দাম",
+    "product_quantity":"পণ্যের পরিমাণ",
+    "product_discount":"পণ্য ছাড়",
+    "product_description":"পণ্যের বর্ণনা",
+    "enter_your_product_description":"আপনার পণ্য বিবরণ লিখুন।",
+    "enter_your_product_price":"আপনার পণ্য মূল্য লিখুন।",
+    "enter_your_product_discount":"আপনার পণ্য ডিসকাউন্ট লিখুন।",
+    "enter_your_product_name":"আপনার পণ্যের নাম লিখুন।",
+    "enter_your_product_quantity":"আপনার পণ্য পরিমাণ লিখুন।",
+    "regular_price":"নিয়মিত মূল্য",
+    "discount_price":"ছাড় মূল্য",
+    "tk_title":"৳",
+    "new_title":"নতুন",
+    "product_description":"পণ্যের বর্ণনা",
+    "similar_products":"একই পণ্য",
+    "details":"বিস্তারিত:",
+    "products_in_stock":"স্টক পণ্য",
+    "add_to_cart":"কার্টে যোগ করুন",
+    "already_product_added":"ইতিমধ্যে পণ্য যোগ করা হয়েছে",
+    "product_added_in_cart":"পণ্য কার্টে যোগ করা হয়েছে",
+    "full_name":"পুরো নাম",
+    "email":"ইমেইল",
+    "password":"পাসওয়ার্ড",
+    "enter_your_full_name":"আপনার পুরো নাম লিখুন",
+    "enter_your_email":"আপনার ইমেইল লিখুন",
+    "enter_your_password":"আপনার পাসওয়ার্ড লিখুন",
+    "already_have_a_sellers_account":"ইতিমধ্যে একটি বিক্রেতার অ্যাকাউন্ট আছে?",
+    "already_have_a_customers_account":"ইতিমধ্যে একটি গ্রাহকের অ্যাকাউন্ট আছে?",
+    "create_sellers_account":"বিক্রেতার অ্যাকাউন্ট তৈরি করুন",
+    "create_customers_account":"গ্রাহকের অ্যাকাউন্ট তৈরি করুন",
+    "login":"প্রবেশ করুন",
+    "sign_up":"নিবন্ধন করুন",
+    "or":"অথবা",
+    "submit": "জমা দিন",
+    "account_create_successfully":"অ্যাকাউন্ট সফলভাবে তৈরি করা হয়েছে",
+    "something_went_wrong":"কিছু ভুল হয়েছে, সমস্যা",
+    "sign_in_to_Customers_account":"গ্রাহকের অ্যাকাউন্টে সাইন ইন করুন",
+    "sign_in_to_sellers_account":"বিক্রেতার অ্যাকাউন্টে সাইন ইন করুন",
+    "no_image_selected":"কোনো ছবি নির্বাচন করা হয়নি",
+    "forget_passwowrd":"পাসওয়ার্ড ভুলে গেছেন?",
+    "click_here":"এখানে ক্লিক করুন",
+    "enter_your_email_for_reset_your_password":"আপনার পাসওয়ার্ড রিসেট করার জন্য আপনার ইমেল লিখুন.",
+    "verification_code_has_sent_to_the_mail":"যাচাইকরণ কোড মেইলে পাঠানো হয়েছে"
 }
